# ToDoTimeSquare

./: .gitignore  .gitmessage.txt  LICENSE  README.md  build.yaml  installer.iss  l10n.yaml  pubspec.yaml  radio_playlist.json
.github/workflows/: deploy_pages.yaml  release.yaml
android/app/: build.gradle.kts
commit_template/: commit提交指南.md  emoji.md  release.md  release_v0.7.0.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/database/: app_database.dart  app_database.g.dart  database_initializer.dart
lib/i18n/: app_en.arb  app_zh.arb  i18n.dart  i18n_en.dart  i18n_zh.dart
lib/models/: focus_record.dart  models.dart  music_track.dart  todo.dart
lib/providers/: auth_provider.dart  background_music_provider.dart  music_cache_manager.dart  pomodoro_provider.dart  statistics_provider.dart  tag_provider.dart  theme_provider.dart  todo_provider.dart
lib/repositories/: focus_record_repository.dart  focus_record_repository.g.dart  todo_repository.dart  todo_repository.g.dart
lib/routes/: app_router.dart
lib/screens/: home.dart
linux/: CMakeLists.txt  main.cc
scripts/: 163music.py  pyproject.toml  replace_withopacity.ps1  replace_withvalues_named.ps1  replace_withvalues_to_withalpha.ps1
scripts/app/: config.py  database.py  main.py
scripts/app/crud/: auth.py  user.py
scripts/app/dependencies/: auth.py
scripts/app/models/: user.py
scripts/app/routers/: auth.py  users.py
scripts/app/schemas/: token.py  user.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+113 files in other folders)
